# Ilab

./: .gitignore  README.md
2Q_Cache/: .gitignore  CMakeLists.txt  README.md
2Q_Cache/belady/: README.md  belady.cpp
2Q_Cache/belady/NormDist/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
2Q_Cache/headers/: cache.hpp
2Q_Cache/source/: main.cpp
2Q_Cache/test/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  unTests.cpp
BitonicSort/: CMakeLists.txt  README.md
BitonicSort/generator/: a.out  generator.cpp
BitonicSort/headers/: a.out  bitsort.hpp  common.hpp  ocl.hpp
BitonicSort/kernels/: kernel.cl  kernel_localmem.cl
BitonicSort/sources/: a.out  bitsort.cpp  kernel.cl  main.cpp  test.cpp  time.cpp
BitonicSort/tests/: test1  test2
Graph/: CMakeLists.txt  README.md
Graph/customLexer/: customLexer.cpp  customLexer.hpp
Graph/headers/: graph.hpp
Graph/lexer/: graph.l
Graph/sources/: main.cpp
Matrix/: CMakeLists.txt  README.md
Matrix/googletests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Matrix/googletests/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Matrix/googletests/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Matrix/headers/: common.hpp  matrix.hpp
Matrix/source/: main.cpp
Matrix/sources/: common.cpp  main.cpp  test.cpp
Matrix/tests/: answ3.txt  answ4.txt  answ5.txt  answ6.txt  answ7.txt  answ8.txt  test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
ParaCL/: README.md
ParaCompiler/: CMakeLists.txt  README.md
ParaCompiler/backend/: CMakeLists.txt
ParaCompiler/backend/pcllib/: pcllib.cpp
ParaCompiler/driver/: driver.cpp
ParaCompiler/frontend/: CMakeLists.txt  frontend.cpp
ParaCompiler/frontend/ast/: ast.cpp
ParaCompiler/frontend/lexer/: lexer.l
ParaCompiler/frontend/parser/: grammar.y  parser.y
ParaCompiler/include/backend/: backend.hpp
ParaCompiler/include/backend/codegen/: codegen.hpp
ParaCompiler/include/common/: locator.hpp  n_ary_tree.hpp
ParaCompiler/include/frontend/: frontend.hpp
ParaCompiler/include/frontend/ast/: ast.hpp
ParaCompiler/include/frontend/lexer/: lexer.hpp
ParaCompiler/include/frontend/parser/: parser.hpp
ParaCompiler/tests/: 001.cl  002.pcl  factorial.pcl
Tree/: README.md
Triangles/: README.md  a.out  main.cpp  test1.txt  test2.txt  test3.txt  test4.txt  treeDump.gv  triangles.hpp
