# find_package (LLVM REQUIRED CONFIG)
# message (STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
# message (STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

# include_directories (${LLVM_INCLUDE_DIRS})
# separate_arguments (LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
# add_definitions (${LLVM_DEFINITIONS_LIST})

# llvm_map_components_to_libnames(llvm_libs support core codegen irreader)


# message(STATUS "Current LLVM libs: ${llvm_libs}")

# set(llvm_libs "${llvm_libs}" PARENT_SCOPE)
